--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
