--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/react": "^5.11.0",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@react-google-maps/api": "^2.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
